--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <img src="pictures/ЛогоФитнес.jpg" HEIGHT="500" align="left">
 <img src="pictures/Изображение 1.jpg" HEIGHT="300">
 <img src="pictures/Изображение 2.jpg" HEIGHT="400">
-<h1><font size="7" font style=color:white><a href="AboutUs.html" onclick="ym(100665839,'reachGoal','click'); gtag('event','Click_on_link')">Подробнее о нас</a></font>
+<h1><font size="7" font style=color:white><a href="AboutUs.html" onclick="ym(100665839,'reachGoal','click'); gtag('event', 'LinkClick')">Подробнее о нас</a></font>
 
 
 
