--- a/work.html
+++ b/work.html
@@ -40,7 +40,7 @@
 	</tr>
 	<tr>
 		<td>
-		<a href="index.html">
+		<a href="index.html" onclick="ym(100665839,'reachGoal','go2home'); gtag('event', 'go2home')">
 			<img src="images/work_02.jpg" width="70" height="54" alt=""></td>
 		<td rowspan="2">
 			<img src="images/work_03.jpg" width="272" height="685" alt=""></td>
